Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25068

Node crashes with Transport endpoint is not connected mysqld got signal 6 ;

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.4.18, 10.4.19, 10.5.9, 10.4.20, 10.4.21, 10.4.22
    • 10.4.26, 10.5.17, 10.6.9, 10.7.5, 10.8.4
    • Galera
    • None
    • CentOS

    Description

      3 Node Setup, all 3 nodes crashed. Bootstrap required.

      Node 1 crash output

      Mar  5 17:48:58  mysqld[116636]: terminate called after throwing an instance of 'boost::exception_detail::clone_impl<boost::exception_detail::error_info_injector<std::system_error> >'
      Mar  5 17:48:58  mysqld[116636]: what():  remote_endpoint: Transport endpoint is not connected
      Mar  5 17:48:58  mysqld[116636]: 210305 17:48:58 [ERROR] mysqld got signal 6 ;
      Mar  5 17:48:58  mysqld[116636]: This could be because you hit a bug. It is also possible that this binary
      Mar  5 17:48:58  mysqld[116636]: or one of the libraries it was linked against is corrupt, improperly built,
      Mar  5 17:48:58  mysqld[116636]: or misconfigured. This error can also be caused by malfunctioning hardware.
      Mar  5 17:48:58  mysqld[116636]: To report this bug, see https://mariadb.com/kb/en/reporting-bugs
      Mar  5 17:48:58  mysqld[116636]: We will try our best to scrape up some info that will hopefully help
      Mar  5 17:48:58  mysqld[116636]: diagnose the problem, but since we have already crashed,
      Mar  5 17:48:58  mysqld[116636]: something is definitely wrong and this may fail.
      Mar  5 17:48:58  mysqld[116636]: Server version: 10.4.18-MariaDB-log
      Mar  5 17:48:58  mysqld[116636]: key_buffer_size=134217728
      Mar  5 17:48:58  mysqld[116636]: read_buffer_size=131072
      Mar  5 17:48:58  mysqld[116636]: max_used_connections=76
      Mar  5 17:48:58  mysqld[116636]: max_threads=153
      Mar  5 17:48:58  mysqld[116636]: thread_count=75
      Mar  5 17:48:58  mysqld[116636]: It is possible that mysqld could use up to
      Mar  5 17:48:58  mysqld[116636]: key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 781104 K  bytes of memory
      Mar  5 17:48:58  mysqld[116636]: Hope that's ok; if not, decrease some variables in the equation.
      Mar  5 17:48:58  mysqld[116636]: Thread pointer: 0x0
      Mar  5 17:48:58  mysqld[116636]: Attempting backtrace. You can use the following information to find out
      Mar  5 17:48:58  mysqld[116636]: where mysqld died. If you see no messages after this, something went
      Mar  5 17:48:58  mysqld[116636]: terribly wrong...
      Mar  5 17:48:59  mysqld[116636]: stack_bottom = 0x0 thread_stack 0x49000
      Mar  5 17:48:59  mysqld[116636]: /usr/sbin/mysqld(my_print_stacktrace+0x2e)[0x55a14151e47e]
      Mar  5 17:48:59  mysqld[116636]: /usr/sbin/mysqld(handle_fatal_signal+0x30f)[0x55a140face8f]
      Mar  5 17:48:59  mysqld[116636]: /lib64/libpthread.so.0(+0xf630)[0x7f5879976630]
      Mar  5 17:48:59  mysqld[116636]: /lib64/libc.so.6(gsignal+0x37)[0x7f5877c463d7]
      Mar  5 17:48:59  mysqld[116636]: /lib64/libc.so.6(abort+0x148)[0x7f5877c47ac8]
      Mar  5 17:48:59  mysqld[116636]: /lib64/libstdc++.so.6(_ZN9__gnu_cxx27__verbose_terminate_handlerEv+0x165)[0x7f5878340a95]
      Mar  5 17:48:59  mysqld[116636]: /lib64/libstdc++.so.6(+0x5ea06)[0x7f587833ea06]
      Mar  5 17:48:59  mysqld[116636]: /lib64/libstdc++.so.6(+0x5ea33)[0x7f587833ea33]
      Mar  5 17:48:59  mysqld[116636]: /lib64/libstdc++.so.6(+0x5ec53)[0x7f587833ec53]
      Mar  5 17:48:59  mysqld[116636]: /usr/lib64/galera-4/libgalera_smm.so(+0x1997a4)[0x7f586ddc07a4]
      Mar  5 17:48:59  mysqld[116636]: /usr/lib64/galera-4/libgalera_smm.so(+0x19984c)[0x7f586ddc084c]
      Mar  5 17:48:59  mysqld[116636]: /usr/lib64/galera-4/libgalera_smm.so(+0x1a57bf)[0x7f586ddcc7bf]
      Mar  5 17:48:59  mysqld[116636]: /usr/lib64/galera-4/libgalera_smm.so(+0x1a78b8)[0x7f586ddce8b8]
      Mar  5 17:48:59  mysqld[116636]: /usr/lib64/galera-4/libgalera_smm.so(+0x1aaf13)[0x7f586ddd1f13]
      Mar  5 17:48:59  mysqld[116636]: /usr/lib64/galera-4/libgalera_smm.so(+0x19897b)[0x7f586ddbf97b]
      Mar  5 17:48:59  mysqld[116636]: /usr/lib64/galera-4/libgalera_smm.so(+0x194b91)[0x7f586ddbbb91]
      Mar  5 17:48:59  mysqld[116636]: /usr/lib64/galera-4/libgalera_smm.so(+0xc08c9)[0x7f586dce78c9]
      Mar  5 17:48:59  mysqld[116636]: /usr/lib64/galera-4/libgalera_smm.so(+0xa6bcf)[0x7f586dccdbcf]
      Mar  5 17:48:59  mysqld[116636]: /usr/lib64/galera-4/libgalera_smm.so(+0xad859)[0x7f586dcd4859]
      Mar  5 17:48:59  mysqld[116636]: /lib64/libpthread.so.0(+0x7ea5)[0x7f587996eea5]
      Mar  5 17:48:59  mysqld[116636]: /lib64/libc.so.6(clone+0x6d)[0x7f5877d0e9fd]
      
      

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              stuart.green@doccentrics.com Stuart Green
              Votes:
              4 Vote for this issue
              Watchers:
              14 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.