Catch local_endpoint() and remote_endpoint() exceptions

ASIO functions local_endpoint() and remote_endpoint() can throw
exceptions, catch them so they are not propagated on stack.

This should fix MDEV-25068 issue.